# ric-plt-lib-rmr

./: .gitignore  .gitmodules  .gitreview  .readthedocs.yaml  BUILD  CHANGES  CHANGES_CORE.txt  CHANGES_WRAPPER.txt  CMakeLists.txt  Dockerfile  INFO.yaml  NOTES  README  container-tag.yaml  groups  project.config  tox.ini
.github/workflows/: gerrit-novote-merge.yaml
.releases/: packagecloud_release.yaml
ci/: Dockerfile  build_all.sh  ci_build.ksh  extract-build-artifacts.sh  publish.ksh
doc/: CMakeLists.txt  README
doc/src/: README  generic_ps.im  html.im  markdown.im  roff.im  rst.im  txt.im
doc/src/man/: .gitignore  README  env_var_list.im  retry.im  rmr.7.xfm  rmr_alloc_msg.3.xfm  rmr_bytes2meid.3.xfm  rmr_bytes2payload.3.xfm  rmr_bytes2xact.3.xfm  rmr_call.3.xfm  rmr_close.3.xfm  rmr_free_msg.3.xfm  rmr_get_const.3.xfm  rmr_get_meid.3.xfm  rmr_get_rcvfd.3.xfm  rmr_get_src.3.xfm  rmr_get_srcip.3.xfm  rmr_get_trace.3.xfm  rmr_get_trlen.3.xfm  rmr_get_xact.3.xfm  rmr_init.3.xfm  rmr_init_trace.3.xfm  rmr_mt_call.3.xfm  rmr_mt_rcv.3.xfm  rmr_payload_size.3.xfm  rmr_rcv_msg.3.xfm  rmr_ready.3.xfm  rmr_realloc_payload.3.xfm  rmr_rts_msg.3.xfm  rmr_send_msg.3.xfm  rmr_set_fack.3.xfm  rmr_set_low_lat.3.xfm  rmr_set_stimeout.3.xfm  rmr_set_trace.3.xfm  rmr_set_vlevel.3.xfm  rmr_str2meid.3.xfm  rmr_str2xact.3.xfm  rmr_support.3.xfm  rmr_torcv_msg.3.xfm  rmr_trace_ref.3.xfm  (+8 more)
doc/src/rtd/: .gitignore  Makefile  README  config-deploy.xfm  developer-guide.xfm  fmt_changes.ksh  gen_man_list.sh  gen_title.im  license.im  overview.xfm  publish_lib.sh  publish_man.sh  rel-notes.xfm  scrape_types.sh  setup.im  user-guide.xfm
docs/: README  conf.yaml  config-deploy.rst  developer-guide.rst  index.rst  installation-guide.rst  msg_types.rst  overview.rst  rel-notes.rst  release-notes.rst  rmr.7.rst  rmr_alloc_msg.3.rst  rmr_bytes2meid.3.rst  rmr_bytes2payload.3.rst  rmr_bytes2xact.3.rst  rmr_call.3.rst  rmr_close.3.rst  rmr_free_msg.3.rst  rmr_get_const.3.rst  rmr_get_meid.3.rst  rmr_get_rcvfd.3.rst  rmr_get_src.3.rst  rmr_get_srcip.3.rst  rmr_get_trace.3.rst  rmr_get_trlen.3.rst  rmr_get_xact.3.rst  rmr_init.3.rst  rmr_init_trace.3.rst  rmr_mt_call.3.rst  rmr_mt_rcv.3.rst  rmr_payload_size.3.rst  rmr_rcv_msg.3.rst  rmr_ready.3.rst  rmr_realloc_payload.3.rst  rmr_rts_msg.3.rst  rmr_send_msg.3.rst  rmr_set_fack.3.rst  rmr_set_low_lat.3.rst  rmr_set_stimeout.3.rst  rmr_set_trace.3.rst  (+14 more)
examples/: Makefile  README  health_check.c  msg_echo.c  receiver.c  sender.c
releases/: 0.12.0-pypi.yaml  0.13.2-pypi.yaml  0.13.3-pypi.yaml  0.13.4-pypi.yaml  1.11.2-rmr.yaml  packagecloud-1.11.2-rmr.yaml  packagecloud-3.6.2-rmr.yaml  packagecloud-rmr.yaml  packagecloud-tree.yaml  pypi-2.0.0-pypi.yaml  pypi-2.1.0.yaml  pypi-2.2.0.yaml  pypi-2.2.1.yaml  pypi-4.0.0.yaml  rmr-python.yaml  tree.yaml
src/: README
src/bindings/rmr-python/: Changelog.md  Dockerfile-DocGen  Dockerfile-Unit-Test  README  README.md  README.rst  rmr-version.yaml  setup.py  tox.ini
src/bindings/rmr-python/docs/: Changelog.rst  generate.sh  release-notes.rst
src/bindings/rmr-python/examples/: rcv_all.py  receive.py  send.py
src/bindings/rmr-python/rmr/: exceptions.py  helpers.py  rmr.py  stretch.py
src/bindings/rmr-python/tests/: conftest.py  test_rmr.py  test_rmr_mocks.py
src/common/: CMakeLists.txt
src/common/include/: RIC_message_types.h  rmr.h  rmr_agnostic.h  rmr_symtab.h
src/common/src/: README  mbuf_api.c  ring_static.c  rt_generic_static.c  rtc_static.c  symtab.c  tools_static.c  wormholes.c  wrapper.c
src/nanomsg/include/: rmr_private.h
src/nanomsg/src/: rmr.c  rtable_static.c  sr_static.c
src/nng/include/: rmr_nng_private.h
src/nng/src/: rmr_nng.c  rtable_nng_static.c  sr_nng_static.c
src/rmr/: STYLE
src/rmr/common/: CMakeLists.txt
src/rmr/common/include/: RIC_message_types.h  rmr.h  rmr_agnostic.h  (+3 more)
src/rmr/nanomsg/: CMakeLists.txt
src/rmr/nng/: CMakeLists.txt
src/rmr/nng/include/: rmr_nng_private.h
src/rmr/nng/src/: mt_call_nng_static.c  rmr_nng.c  rtable_nng_static.c  sr_nng_static.c
src/rmr/si/: CMakeLists.txt
src/rmr/si/include/: rmr_si_private.h
src/rmr/si/src/: mt_call_si_static.c  rmr_debug_si.c  rmr_si.c  rtable_si_static.c  rtc_si_static.c  sr_si_static.c
src/rmr/si/src/si95/: README  siaddress.c  sialloc.c  sibldpoll.c  sicbreg.c  sicbstat.c  siclose.c  siconnect.c  siconst.h  siestablish.c  sigetadd.c  sigetname.c  siinit.c  silisten.c  sinew.c  sinewses.c  sipoll.c  siproto.h  sircv.c  sisend.c  sisendt.c  sisetup.h  sishutdown.c  sistruct.h  siterm.c  sitransport.h  sitrash.c  siwait.c  socket_if.h
src/support/: CMakeLists.txt  README  health_ck.c  rmr_probe.c
test/: .gitignore  .targets  Makefile  README  alarm_static_test.c  cov2xml.ksh  hdr_static_test.c  large_meid.rt  lg_buf_static_test.c  logging_test.c  mbuf_api_static_test.c  mbuf_api_test.c  ring_static_test.c  ring_test.c  rmr_debug_si_test.c  rmr_nano_test.c  rmr_nng_api_static_test.c  rmr_nng_test.c  rmr_si_api_static_test.c  rmr_si_rcv_static_test.c  rmr_si_rcv_test.c  rmr_si_test.c  rt_nano_static_test.c  rt_static_test.c  run_all_test.ksh  run_app_tests  run_app_tests.sh  run_unit_tests.sh  si95_test.c  sr_nano_static_test.c  sr_nng_static_test.c  sr_si_static_test.c  symtab_static_test.c  symtab_test.c  test_common_em.c  test_ctx_support.c  test_gen_rt.c  test_msg_support.c  test_nng_em.c  test_si95_em.c  (+8 more)
test/app_test/: .gitignore  Makefile  NOTES.txt  README  caller.c  create_invalid_request.sh  create_invalid_request2.sh  create_valid_request.sh  ex_rts_receiver.c  lcaller.c  lreceiver.c  lsender.c  mt_listener.c  rebuild.ksh  receiver.c  rt.mask  run_all.ksh  run_all.sh  run_app_test.ksh  run_app_test.sh  run_call_test.ksh  run_call_test.sh  run_exrts_test.ksh  run_exrts_test.sh  run_ipv6_test.sh  run_lcall_test.ksh  run_lcall_test.sh  run_multi_test.ksh  run_multi_test.sh  run_neg_rmr_size_test.sh  run_rr_test.ksh  run_rr_test.sh  run_rts_test.ksh  run_rts_test.sh  sender.c  test_support.c  v_sender.c
test/rtg_sim/: BUILD  CMakeLists.txt  README  req_resp.c  req_resp.h  rtm_sim.c
(+20 files in other folders)
